test/cli/test-generating-policy/foreach/clone-generate-secrets/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
context: context.yaml
kind: Test
metadata:
  name: kyverno-test
policies:
- policy.yaml
resources:
- resource.yaml
results:
- generatedResource: generated-resources.yaml
  isGeneratingPolicy: true
  kind: ConfigMap
  policy: foreach-clone-sync-create
  resources:
  - foreach-clone-sync-create
  result: pass
